--- a/booking.webestica.com/assets/css/color.css
+++ b/booking.webestica.com/assets/css/color.css
@@ -1,12 +1,12 @@
 /* Update below HEX and RGB color code to your primary color for light mode */
 [data-bs-theme=light] {
-    --bs-primary: #19f032 !important;
-    --bs-primary-rgb: 25, 240, 50 !important; 
-    --bs-link-color:#19f032 !important;
-    --bs-link-hover-color:#0c911c !important;
-    --bs-link-color-rgb:25, 240, 50 !important;
-    --bs-link-hover-color-rgb:12, 145, 28;
-    --bs-nav-pills-link-active-bg: #19f032 !important;
+    --bs-primary: #f0ac19 !important;
+    --bs-primary-rgb: 240, 172, 25  !important; 
+    --bs-link-color:#f0ac19 !important;
+    --bs-link-hover-color:#c48a0b !important;
+    --bs-link-color-rgb: 240, 172, 25 !important;
+    --bs-link-hover-color-rgb: 196, 138, 11;
+    --bs-nav-pills-link-active-bg: #f0ac19 !important;
   }
   
   /* Update below HEX and RGB color code to your primary color for dark mode */
