Added 'Why choose for Basetao' section.

--- a/booking.webestica.com/assets/css/custom.css
+++ b/booking.webestica.com/assets/css/custom.css
@@ -1,3 +1,10 @@
 .navbar-expand-xl.navbar-divider {
     border: none;
 }
+.mx-end {
+    margin-right: 0 !important;
+    margin-left: auto !important;
+}
+.no-border {
+    border-bottom: none !important;
+}
